[gd_scene format=3 uid="uid://cnyc1qucll737"]

[ext_resource type="Script" uid="uid://raa8vx1jr4ci" path="res://main_menu.gd" id="1_06t4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.41368303, 0.4136831, 0.41368303, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.6682168, 0.6682164, 0.6682166, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhts7"]

[node name="main_menu" type="Control" unique_id=220518261]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="Panel" type="Panel" parent="." unique_id=990618428]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -575.0
offset_top = -324.0
offset_right = 579.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=428212168]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.5
offset_top = -121.0
offset_right = 190.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Button" type="Button" parent="VBoxContainer" unique_id=2035220581]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rhts7")
text = "level select "

[node name="Button2" type="Button" parent="VBoxContainer" unique_id=193419053]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rhts7")
text = " Toturial"

[node name="Button3" type="Button" parent="VBoxContainer" unique_id=499713698]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rhts7")
text = " Exit"

[node name="Label" type="Label" parent="." unique_id=1803542671]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.5
offset_top = -301.0
offset_right = 242.5
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 81
text = "Game Name"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_toturial_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
